# open-dtc-ops

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance_task.md
.github/workflows/: ci.yml
docs/: csv-format.md  demo-cases.md  formulas.md  getting-started.md  github-issue-drafts.md  maintenance-backlog.md  release-checklist.md  release-notes-v0.1.0.md  roadmap.md
examples/: inventory_sample.csv  product_research_sample.csv  sales_sample.csv
src/dtcops/: __init__.py  cli.py  inventory.py  profit.py  roi.py  scorecard.py  validators.py
tests/: test_cli_smoke.py  test_inventory.py  test_profit.py  test_roi.py  test_scorecard.py  test_validators.py
