[metadata]
name = open-dtc-ops
version = 0.1.0
description = CSV-based ecommerce operations toolkit for small DTC and marketplace sellers.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.0,<2.4
    rich>=13.0,<14.0
    typer>=0.12,<0.13

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.0,<9.0

[options.entry_points]
console_scripts =
    dtcops = dtcops.cli:app
